Revamp portfolio: update content, images, and projects
Updated personal information, biography, and contact details in config and about pages. Replaced profile images with new PNG versions and updated references throughout. Added new project and publication markdown files for database agent, explainable hardhat detection, robust neural network analysis, and semantic product catalogue search. Removed placeholder project files and updated navigation, categories, and page titles for clarity. Added new images and visual assets for projects, and updated bibliography with recent papers.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,6 +33,40 @@
   publisher={American Association of Physics Teachers}
 }
 
+@article{ilyas2019adversarial,
+  abbr={NeurIPS},
+  bibtex_show={true},
+  title={Adversarial Examples Are Not Bugs, They Are Features},
+  author={Ilyas, Andrew and Santurkar, Shibani and Tsipras, Dimitris and Engstrom, Logan and Tran, Brandon and Madry, Aleksander},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  year={2019},
+  note={arXiv preprint arXiv:1905.02175}
+}
+@article{bau2020understanding,
+  abbr={PNAS},
+  bibtex_show={true},
+  title={Understanding the Role of Individual Units in a Deep Neural Network},
+  author={Bau, David and Zhu, Jun-Yan and Strobelt, Hendrik and Lapedriza, Agata and Zhou, Bolei and Torralba, Antonio},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={117},
+  number={*}, 
+  pages={*--*},
+  year={2020},
+  doi={10.1073/pnas.1907375117}
+}
+
+@article{yao2023react,
+  abbr={ICLR 2023},
+  bibtex_show={true},
+  title={ReAct: Synergizing Reasoning and Acting in Language Models},
+  author={Yao, Shunyu and Zhao, Jeffrey and Yu, Dian and Du, Nan and Shafran, Izhak and Narasimhan, Karthik and Cao, Yuan},
+  journal={arXiv preprint},
+  volume={arXiv:2210.03629},
+  year={2022},
+  publisher={arXiv}
+}
+
 @article{PhysRev.47.777,
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
